<resources>
    <string name="app_name">Turismo Teo</string>
    <string name="visitanos">Visítanos:</string>
    <string name="visitanosMayuscula">¡VISÍTANOS!</string>
    <string name="comoChegar">CÓMO LLEGAR</string>
    <string name="ondeDurmir">DÓNDE DORMIR</string>
    <string name="ondeCelebrar">DÓNDE CELEBRAR</string>
    <string name="ondecomer">DONDE COMER</string>
    <string name="cervexaria">Cervecería</string>
    <string name="osTilos">Los Tilos</string>
    <string name="menu">Menú</string>
    <string name="marisqueria">Marisquería</string>
    <string name="pulperia">Pulpería</string>
    <string name="lampai">Lampai</string>
    <string name="che">CHE 2</string>
    <string name="direccionChe">Tr.ª de Montouto, 28</string>
    <string name="telefonoChe">+ 34 981 80 68 48</string>
    <string name="emailChe">panaderiache@hotmail.com</string>
    <string name="webChe">www.che-2.edan.io/</string>
    <string name="casaJavier">CASA JAVIER</string>
    <string name="direccionCasaJavier">Vilar de Francos, 115</string>
    <string name="telefonoCasaJavier">+ 34 635 53 66 42</string>
    <string name="emailCasaJavier">vsj2181@yahoo.es</string>
    <string name="webCasaJavier">Facebook - Casa Javier</string>
    <string name="asBrasas">AS BRASAS</string>
    <string name="direccionAsBrasas">Rua Aido,24</string>
    <string name="telefonoAsBrasas">+ 34 981 53 15 36</string>
    <string name="emailAsBrasas">asbrasasparrillada@hotmail.com</string>
    <string name="webAsBrasas">Facebook - As Brasas</string>
    <string name="ncCoffeeBar">NC COFFEE BAR</string>
    <string name="direccionNcCoffeeBar">Trva. Cacheiras, 25</string>
    <string name="telefonoNcCoffeeBar">+ 34 981 80 65 81</string>
    <string name="webNcCoffeeBar">Facebook - NC Coffee Bar</string>
    <string name="oPintor">O PINTOR</string>
    <string name="direccionOPintor">Rua Aido, 24</string>
    <string name="telefonoOPintor">+ 34 661 00 26 67</string>
    <string name="emailOPintor">pilitabudy@hotmail.com</string>
    <string name="webOPintor">Facebook - Bar o pintor</string>
    <string name="calabaza">LA CALABAZA DEL PEREGRINO</string>
    <string name="direccionCalabaza">Lugar dua franco,5</string>
    <string name="telefonoCalabaza">+ 34 981 19 42 44</string>
    <string name="emailCalabaza">alberguecalabazaperegrino@gmail.com</string>
    <string name="webCalabaza">Facebook - La Calabaza del Peregrino</string>
    <string name="fogarDoSantiso">FOGAR DO SANTISO</string>
    <string name="direccionFogarDoSantiso">Trasellas, 13</string>
    <string name="telefonoFogarDoSantiso">+ 34 981 80 59 48</string>
    <string name="emailFogarDoSantiso">fogar@fogardosantiso.es</string>
    <string name="webFogarDoSantiso">www.fogardosantiso.es</string>
    <string name="oRincon">O RINCÓN</string>
    <string name="direccionORincon">A Grela</string>
    <string name="telefonoORincon">+ 34 981 89 31 19</string>
    <string name="emailORincon">restauranteorincon@hotmail.com</string>
    <string name="webORincon">Facebook - Restaurante O Rincón</string>
    <string name="cantina">A CANTINA</string>
    <string name="direccionCantina">Igrexa, 16</string>
    <string name="telefonoCantina">+ 34 981 89 31 10</string>
    <string name="webCantina">Facebook - A Cantina</string>
    <string name="hotelCongreso">HOTEL CONGRESO</string>
    <string name="direccionHotelCongreso">Rúa das Mámoas de Montouto, 4</string>
    <string name="telefonoHotelCongreso">+ 34 981 81 90 80</string>
    <string name="emailHotelCongreso">hcongreso@hotelcongreso.com</string>
    <string name="webHotelCongreso">www.hotelcongreso.com</string>
    <string name="laCasaDeLasTortillas">LA CASA DE LAS TORTILLAS</string>
    <string name="direccionLaCasaDeLasTortillas">Travesía de Cacheiras, nº 56</string>
    <string name="telefonoLaCasaDeLasTortillas">+ 34 981 80 71 28</string>
    <string name="webLaCasaDeLasTortillas">shorturl.at/nxZ23</string>
    <string name="cerveceriaManu">CERVECERÍA MANU</string>
    <string name="direccionCerveceriaManu">Tr.ª de Montouto, 49, bajo</string>
    <string name="telefonoCerveceriaManu">+ 34 981 45 84 67</string>
    <string name="emailCerveceriaManu">cerveceriamanu49@gmail.com</string>
    <string name="elRinconDeKoller">EL RINCÓN DE KOLLER</string>
    <string name="direccionElRinconDeKoller">Rúa do Ameneiro, 10</string>
    <string name="telefonoElRinconDeKoller">+ 34 981 46 13 58</string>
    <string name="emailElRinconDeKoller">elrincondekoller@gmail.com</string>
    <string name="webElRinconDeKoller">Facebook - El Rincón de Koller</string>
    <string name="moradasNoUlla">MU_MORADAS NO ULLA</string>
    <string name="direccionMoradasNoUlla">Freixeiro 3</string>
    <string name="telefonoMoradasNoUlla">+ 34 652 95 77 83</string>
    <string name="emailMoradasNoUlla">reservas@moradasnoulla.com</string>
    <string name="webMoradasNoUlla">www.moradasnoulla.com</string>
    <string name="aCasinaDeEsther">A CASIÑA DE ESTHER</string>
    <string name="direccionACasinaDeEsther">Tras do Eixo, 25</string>
    <string name="telefonoACasinaDeEsther">+ 34 647 41 18 84</string>
    <string name="emailACasinaDeEsther">info@casitadeesther.com</string>
    <string name="webACasinaDeEsther">www.casitadeesther.com</string>
    <string name="parrilladaChaves">PARRILLADA CHAVES</string>
    <string name="direccionParrilladaChaves">Igrexa, 8</string>
    <string name="telefonoParrilladaChaves">+34 981 80 55 45</string>
    <string name="emailParrilladaChaves">parrilladachaves@gmail.com</string>
    <string name="webParrilladaChaves">www.facebook.com/chaves</string>
    <string name="Ranha">RAÑA</string>
    <string name="direccionRanha">Raxó, 34 (N-550, Km 49)</string>
    <string name="telefonoRanha">+34 981 54 88 39</string>
    <string name="emailRanha"></string>
    <string name="webRanha"></string>
    <string name="vinhosTapasRacions">Vinos, tapas y raciones</string>
    <string name="portico">PORTICO</string>
    <string name="direccionportico">Travesía de Cacheiras, nº 72</string>
    <string name="telefonoportico">+34 981 80 74 97</string>
    <string name="emailportico">restaurante@restauranteportico.es</string>
    <string name="webportico">www.restauranteportico.es</string>
    <string name="abrasa">A BRASA</string>
    <string name="direccionabrasa">Trva. Cacheiras</string>
    <string name="telefonoabrasa">+34 981 80 68 80</string>
    <string name="emailabrasa">abrasacacheiras@gmail.com</string>
    <string name="webabrasa">https://www.restauranteabrasa.com/</string>
    <string name="ofornodamii">O FORNO DÁM II</string>
    <string name="direccionofornodamii">Travesía da Ramallosa, nº 25</string>
    <string name="telefonoofornodamii"></string>
    <string name="emailofornodamii"></string>
    <string name="webofornodamii">Facebook - O Forno Dam II</string>
    <string name="acolmena">A COLMENA</string>
    <string name="direccionacolmena">Ignacio Varela, 19 - Pontevea</string>
    <string name="telefonoacolmena">+34 603 77 14 49</string>
    <string name="emailacolmena"></string>
    <string name="webacolmena">Facebook - Cafe Bar A Colmena</string>
    <string name="tiaMaria">TIA MARÍA</string>
    <string name="direcciontiaMaria">Dos Irmans Liste Forjan, nº 5</string>
    <string name="telefonotiaMaria">+34 981 54 85 70</string>
    <string name="webtiaMaria">Facebook - Tia María Cafe Bar</string>
    <string name="amasaNai">AMASA NAI</string>
    <string name="direccionamasaNai">Rúa Veiga do Mouro, nº 10</string>
    <string name="telefonoamasaNai"></string>
    <string name="emailamasaNai"></string>
    <string name="webamasaNai">Facebook - AMasa Nai</string>
    <string name="mariaCastanha">MARÍA CASTAÑA</string>
    <string name="direccionMariaCastanha">TRAVESIA DA RAMALLOSA, , nº 8</string>
    <string name="telefonoMariaCastanha">+34 981 80 96 28</string>
    <string name="webMariaCastanha">http://mariacastanha.com/</string>
    <string name="buelinhaDaCarballeira">BUELIÑA DA CARBALLEIRA</string>
    <string name="direccionBuelinhaDaCarballeira">Lugar de Olveira 58, San Cristóbal de Reyes</string>
    <string name="telefonoBuelinhaDaCarballeira">+34 658 24 19 97</string>
    <string name="paradaDeFrancos">PARADA DE FRANCOS</string>
    <string name="direccionparadaDeFrancos">Rúa de Francos,43</string>
    <string name="telefonoparadaDeFrancos">+34 981 53 80 04</string>
    <string name="emailparadaDeFrancos"> reservas@paradadefrancos.com</string>
    <string name="webparadaDeFrancos">http://www.paradadefrancos.com</string>
    <string name="casaTouceda">CASA TOUCEDA</string>
    <string name="direccionCasaTouceda">Trva. Casalonga, s/n</string>
    <string name="telefonoCasaTouceda">+34 981 54 83 26</string>
    <string name="webCasaTouceda">Facebook - Casa Touceda</string>
    <string name="aSenra">A SENRA</string>
    <string name="direccionASenra">Ignacio Varela, 5 Bajo</string>
    <string name="telefonoASenra">+34 981 81 57 44</string>
    <string name="emailASenra">asenracafe@gmail.com</string>
    <string name="webASenra">http://www.asenracafe.es/presentacion.html</string>
    <string name="AsadorOCarmelo">ASADOR O CARMELO</string>
    <string name="direccionAsadorOCarmelo">Trva. Casalonga, 6 - CALO</string>
    <string name="telefonoAsadorOCarmelo">+34 981 53 90 45</string>
    <string name="emailAsadorOCarmelo"> asador@asadorocarmelo.es</string>
    <string name="webAsadorOCarmelo">www.asadorocarmelo.es</string>
    <string name="redeDeRutas">RED DE RUTAS</string>
    <string name="patrominio1">PATRIMONIO</string>
    <string name="artesania1">ARTESANÍA</string>
    <string name="actividades1">ACTIVIDADES</string>
    <string name="agenda">AGENDA DE TEO</string>
    <string name="contacto">CONTACTO</string>
    <string name="distancia">Distancia</string>
    <string name="desnivel">Desnivel</string>
    <string name="rutaCircular">Ruta Circular</string>
    <string name="no">No</string>
    <string name="dificultad">Dificultad</string>
    <string name="señalizacion">Señalización</string>
    <string name="inicioRuta">Inicio da Ruta</string>
    <string name="textoBotonWikiloc">Ruta en Wikiloc</string>
    <string name="numero3">3</string>
    <string name="rutaBatalla">Ruta Da Batalla de Cacheiras</string>
    <string name="kmRuta3">8.71 km</string>
    <string name="desnivelruta3">⇑ 287m</string>
    <string name="moderada">Moderada</string>
    <string name="textoSinalizacion3">Sí. Inicio en el \nrectoral de Bamonde</string>
    <string name="coordenadaRuta3">Coordenadas GPS: \n42.784053602488946,\n-8.511513559903454</string>
    <string name="textoRuta3">Ruta de la Batalla de Cacheiras que viene a conmemorar los acontecimientos sucedidos el 23 de abril de 1846.\n \n La ruta de la Batalla de Cacheiras es un recorrido que va desde Bamonde al alto de Montouto y pretende ser una réplica del camino que hicieron algunos de los soldados del general de La Concha que en la noche de 23 de Abril de 1846 hicieron noche en Bamonde para enfrentarse al ejercito sublevado liderazgo por el general Solís en la afamada Batalla. Caminos llenos de historia, de cultura, de hermosos paisajes y arquitectura popular que atraviesan las parroquias de Bamonde, Oza y Cacheiras.
        \n \nSe trata de una ruta lineal que comienza al pie de la <b>rectoral de Bamonde</b> y finaliza en la cumbre de Montouto. A lo largo del recorrido destacan elementos patrimoniales como iglesias, cruceros o núcleos rurales tradicionales, pero también elementos naturales de gran belleza como el salto de agua del río Santa Lucía a su paso por el Recobio, así como el propio <b>mirador de Montouto</b>.
            \n \nLa ruta está perfectamente señalizada (en los dos sentidos de paso) y cuenta también con señalízación para los elementos patrimoniales más destacables en el recorrido.
            \n \nPatrimonio que se encuentra en esta ruta, haz click para más información:</string>
</resources>