<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/logoTeo"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="logoConcello"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="fitXY"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            app:srcCompat="@drawable/logo" />

        <ImageButton
            android:id="@+id/atras"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="205dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="equis"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="fitXY"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            app:srcCompat="@drawable/salir"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/redderutas"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="122dp"
            android:layout_marginEnd="50dp"
            android:text="@string/redeDeRutas"
            android:textColor="#7F4B5A2B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/patrimonio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/redderutas"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/patrominio1"
            android:textColor="#7F4B5A2B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artesania"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/patrimonio"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/artesania1"
            android:textColor="#7F4B5A2B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actividades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/artesania"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/actividades1"
            android:textColor="#7F4B5A2B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/agenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actividades"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/agenda"
            android:textColor="#7F4B5A2B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/agenda"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/contacto"
            android:textColor="#7F4B5A2B"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>